--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img src="img/batman.png" alt="foto de perfil">
+        <img src="img/fotodeperfil.jpg" alt="foto de perfil">
         <h1>Curriculum Vitae Lautaro Ruiz</h1>
     </header>
     <main>
@@ -36,7 +36,7 @@
             <h2>Experiencia Laboral</h2>
             <dt><span class="item-detail">2017-2017: </span>Finiata</dt>
             <dd>Analista de Finanzas</dd>
-            <dt><span class="item-detail">2017-2019</span>AB Inbev</dt>
+            <dt><span class="item-detail">2017-2019: </span>AB Inbev</dt>
             <dd>Analista de Ventas</dd>
         </section>
     </main>    
